<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="EXTERNAL_JAR01">dynamicclass01.jar</string>
    <string name="app_name">CrackMe</string>
    <string name="appdex">/data/data/com.eshard.crackme/app_dex</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="cipher_xor_exception">Something went wrong while running the XOR function!</string>
    <string name="external_class01">com.eshard.crackme.external.DynamicClass01</string>
    <string name="external_meth01">getFlag</string>
    <string name="external_object01">classes.dex</string>
    <string name="external_packed01">com.eshard.crackme.external.packed.ProtectedClass01</string>
    <string name="flagA">U3RvcmluZyBpbiBjb</string>
    <string name="protected_dex01">protected-classes01</string>
    <string name="protected_meth01">getFlag</string>
    <string name="string_about_author">contact@eshard.com</string>
    <string name="string_about_contact">Contact</string>
    <string name="string_about_icon_license">[App Icon] - romannurik.github.io - CC 3.0</string>
    <string name="string_about_license">[This App] - github.com/reoky - MIT</string>
    <string name="string_about_licenses">Licenses</string>
    <string name="string_about_quit">Exit Zero</string>
    <string name="string_about_subtitle">Apps to be reverse-engineered</string>
    <string name="string_about_theme_license">[App Style] - jgilfelt.github.io - CC 3.0</string>
    <string name="string_about_title">Android CrackMe Challenge</string>
    <string name="string_challenge_check">Check</string>
    <string name="string_challenge_delete_file">Delete File</string>
    <string name="string_challenge_guess">Flag Goes Here</string>
    <string name="string_challenge_one_intro">"Reverse engineer this app and find the 'Flags'."</string>
    <string name="string_challenge_one_subtitle">App Storage</string>
    <string name="string_challenge_one_title">Crack me already!</string>
    <string name="string_challenge_write_file">Write File</string>
    <string name="string_hint_hint">Some hints...</string>
    <string name="string_hint_title">Display Hint</string>
    <string name="tab_about">About</string>
    <string name="tab_challenge">Challenge</string>
    <string name="tab_hint">Hint</string>
    <string name="unpacked_dex01">unpacked-classes01.dex</string>
</resources>
