<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/repeating_texture" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:background="#ff126aff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_small">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:textStyle="bold" android:textColor="@android:color/white" android:layout_gravity="center_horizontal" android:id="@id/TextView_Title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_medium" android:text="@string/string_about_title" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textStyle="italic" android:textColor="@android:color/white" android:layout_gravity="center_horizontal" android:id="@id/TextView_SubTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_medium" android:text="@string/string_about_subtitle" />
        </LinearLayout>
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="@color/color_nebula_selected" android:layout_gravity="center_horizontal" android:id="@id/TextView_Credits" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_tiny" android:layout_marginBottom="@dimen/margin_tiny" android:text="@string/string_about_contact" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/color_nebula_selected" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_tiny" android:text="@string/string_about_author" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textStyle="bold" android:textColor="@color/color_nebula_selected" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_tiny" android:text="@string/string_about_licenses" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/color_nebula_selected" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_small" android:text="@string/string_about_license" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/color_nebula_selected" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_small" android:text="@string/string_about_theme_license" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/color_nebula_selected" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_small" android:layout_marginRight="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_small" android:text="@string/string_about_icon_license" />
        <Button android:enabled="true" android:textSize="@dimen/font_medium" android:textColor="@android:color/white" android:layout_gravity="center_horizontal" android:id="@id/button_quit" android:background="@drawable/button_purple_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_small" android:layout_marginBottom="@dimen/margin_small" android:text="@string/string_about_quit" />
    </LinearLayout>
</ScrollView>